[package]
name = "http-proxy"
version = "0.1.3"
edition = "2021"

[[bin]]
name = "http_proxy"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
reqwest = { version = "0.12", features = ["http2", "stream"] }
clap = { version = "4", features = ["derive"] }
futures-util = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
