[package]
name = "http-proxy"
version = "0.1.8"
edition = "2021"

[[bin]]
name = "http_proxy"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
reqwest = { version = "0.12", features = ["http2", "stream"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
clap = { version = "4", features = ["derive"] }
futures-util = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
